src/components/ListingPage/ListingHeader/ListingHeader.module.css
/* ... */
.action-dropdown {
  background: #f7f5f9;
  border-radius: 8px;
  width: 48px;
  height: 40px;
  cursor: pointer;
  display: grid;
  place-items: center;
}

.action-btn-dropdown-wrapper {
  position: relative;
}

.dropdown {
  position: absolute;
  top: 460px;
  z-index: 100;
  /* Dropdown */
  box-shadow: 0px 8px 12px 0px rgba(147, 156, 163, 0.12),
    0px 0px 2px 0px rgba(147, 156, 163, 0.36);
  border-radius: 4px;
  overflow: hidden;
}
.customList {
  list-style: none;
  background: #ffffff;
  min-width: 90px;
}

.customList li {
  width: 90px;
  height: 42px;
  color: #6d747a;
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 18px; /* 128.571% */
  letter-spacing: 0.07px;
  padding: 12px;
  transition: 0.3s;
}
.customList li:hover {
  background-color: #e5e5e5;
}
.content-container {
  display: flex;
  justify-content: space-between;
  margin-top: 9px;
  align-items: flex-end;
}

.hide {
  display: none !important;
}

.rotate {
  display: flex;
  align-items: flex-end;
  rotate: 180deg;
}

.eventDate-parent {
  position: relative;
  min-height: 30px;
  min-width: 100px;
}

.event-dates {
  display: flex;
  flex-direction: column;
  flex-direction: column;
  gap: 4px;
  position: relative;
}

.eventDate {
  display: flex;

  margin-bottom: 10px;
}
.event-date-container {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}
.eventDate p {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #6d747a;
}
.eventDate img {
  margin-right: 6px;
}
.eventDate .date {
  margin-right: 17px;
}
.eventDate .time {
  margin-right: 14px;
}
.edit-field-wrapper {
  padding-top: 32px;
  display: flex;
  gap: 12px;
}
.default-text {
  color: #939ca3;
}
.required-asterisk {
  color: red;
}

.error-red {
  color: #c0504d !important;
}

.contactBtn {
  font-size: 14px;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  line-height: 16px;
  padding: 0 50px;
  height: 32px;
  width: 157px !important;
  display: flex;
  gap: 8px;
  align-items: center;
}

.contactBtn p {
  min-width: max-content;
}

.contactBtnpublic {
  font-size: 14px;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  line-height: 16px;
  padding: 0 50px;
  height: 32px;
  width: 157px !important;
}
.relative {
  position: relative;
  width: fit-content;
}

.flex-col-start {
  display: flex;
}

.profile-img-wrapper .name-container,
.profile-img-wrapper .tagline {
  display: none;
}

/* Apply styles when page is scrolled and `small` class is added to `container` */
.container:has(.header).small {
  background-color: white;
  position: fixed;
  top: var(--navbar-height-desktop);
  left: 0;
  right: 0;
  z-index: 5;
  /* transform: translateY(-100%); */
  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
  opacity: 1;
  /* animation: scroll-in 200ms ease-in-out forwards; */
}
.container:has(.header).small .header {
  grid-template-columns: 60px auto max-content;
  gap: var(--spacing-8);
  align-items: center;
  padding: 10px 0;
  border-bottom: 1px solid #ebedf0;
}
.container:has(.header).small .profile-img-wrapper .edit-btn {
  display: none;
}
.container:has(.header).small .profile-img-wrapper .img {
  width: 60px;
  height: 60px;
}
.container:has(.header).small .center-container .cover-img-wrapper {
  display: none;
}
.container:has(.header).small .center-container .name {
  font-size: 1rem;
  margin-top: 0;
}
.container:has(.header).small .center-container .tagline {
  font-size: 14px;
  margin-top: 0;
}
.container:has(.header).small .action-btn-wrapper {
  display: flex;
  align-items: center;
  column-gap: 12px;
  width: auto;
  height: auto;
  background-color: transparent;

  box-shadow: none;
}
.container:has(.header).small .navigation-tabs {
  display: flex;

  gap: 20px;
  justify-content: flex-start;
  margin: 4px 0 0 23.96%;
  position: sticky;
  min-height: 40px;
}

.container:has(.header).small .navigation-tabs a {
  color: #939ca3;
  line-height: 22px;
  padding: 8px 5px;
  font-weight: 600;
}
.navigation-tabs {
  display: flex;
  justify-content: center;
}
.navigation-tabs a {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  color: #6d747a;
  padding: 8px 5px;
  position: relative;
  min-width: 90px;
  text-align: center;
}
.navigation-tabs a:hover {
  color: #8064a2;
}
.navigation-tabs a.active {
  color: #8064a2 !important;
  font-weight: 600;
}
.navigation-tabs a.active::after {
  content: '';
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  position: absolute;
  background: #8064a2;
  border-radius: 2px 2px 0px 0px;
}
.disabledtab {
  cursor: default;
}

.product-header {
  align-items: flex-start;
  grid-template-columns: 88px auto 160px;
}

.product-header > :nth-child(4) {
  margin-top: auto;
}

.item-view {
  border: 1px solid #8064a2 !important;
}

.item {
  width: 472px;
  height: 472px;
  display: flex;
  padding: 21px 9.5px 21px 9.5px;
  flex-direction: column;
  gap: 4px;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
  border: 1px dashed var(--Primary-Full, #8064a2);
  background: var(--Purple-3, #f7f5f9);
  cursor: pointer;
  position: relative;
}

.active-image {
  object-fit: contain;
  border-radius: 8px;
  width: 472px;
  height: 472px;
  border: 1px solid #8064a2;
}

.item p {
  color: var(--Purple-1, #8064a2);
  font-family: 'Poppins';
  font-size: 12px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  /* 166.667% */
}
.product-header-content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.product-name-container {
  display: flex;
  flex-direction: column;
  padding-left: 24px;
  width: 500px;
}

.product-name-container .name {
  color: #08090a;
  font-size: 20px;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  display: flex;
  gap: 8px;
}
/* ... */

